--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: us.gcr.io/firm-hybrid-283314/auth
+          image: ksdumont/auth
 ---
 apiVersion: v1
 kind: Service
